Initialize walls, snake, and food

--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 #game-canvas {
+	background-color: #EEEEEE;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	margin: auto;
-	background-color: gray;
 }
