--- a/style.css
+++ b/style.css
@@ -15,11 +15,20 @@
 	margin: auto;
 }
 
-#score {
+.score {
 	font-family: monospace;
 	font-size: 1.5em;
 	padding-top: 0.5em;
+}
+
+#current-score {
+	display: inline-block;
 	padding-left: 2em;
+}
+
+#high-score {
+	float: right;
+	padding-right: 2em;
 }
 
 #game-canvas {
